--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(kmeans_icc)
 export(partition)
 export(plot_dr)
+export(sim.nb)
 export(sim_blk_diag_mvn)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,annotate)
@@ -31,6 +32,8 @@ importFrom(stats,pnorm)
 importFrom(stats,prcomp)
 importFrom(stats,qnorm)
 importFrom(stats,resid)
+importFrom(stats,rnbinom)
 importFrom(stats,runif)
 importFrom(stats,sd)
 importFrom(stats,var)
+importFrom(utils,data)
