--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,15 @@ Date: 2017-11-6
 Authors@R: person("Joshua", "Millstein", email = "joshua.millstein@usc.edu", 
   role = c("aut", "cre"))
 Encoding: UTF-8
-Imports: ICC, infotheo, gridExtra, pamr, MASS, ggplot2, stats
+Imports: 
+    ICC,
+    infotheo,
+    gridExtra,
+    pamr,
+    MASS,
+    ggplot2,
+    stats,
+    Rcpp
 Description: A common feature across genomic data types, including genome, 
   epigenome, transcriptome, microbiome, metabolome, etc., is dependencies among 
   variables. Improvements in genomic technologies accompanied by decreasing costs
@@ -37,3 +45,5 @@ Suggests:
     covr
 URL: https://github.com/USCbiostats/partition
 BugReports: https://github.com/USCbiostats/partition/issues
+LinkingTo: 
+    Rcpp
