--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(partition)
 export(plot_dr)
 export(sim.nb)
 export(sim_blk_diag_mvn)
+importFrom(Rcpp,sourceCpp)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,annotate)
 importFrom(ggplot2,geom_area)
@@ -37,3 +38,4 @@ importFrom(stats,runif)
 importFrom(stats,sd)
 importFrom(stats,var)
 importFrom(utils,data)
+useDynLib(partition, .registration = TRUE)
